# cuckoo-filter

./: .gitignore  .gitlab-ci.yml  Doxyfile  HPC_Presentation.odp  LICENSE  README.md  flake.nix  meson.build  mogon_jobscript.sh
benchmark/: benchmark_common.cuh  cuckoo_atomics_comparison.cu  cuckoo_bucket_size.cu  cuckoo_cpu_vs_gpu.cu  cuckoo_ipc_overhead.cu  cuckoo_single_vs_multi_gpu.cu  cuckoo_sorted_vs_unsorted.cu  cuckoo_vs_bloom.cu  cuckoo_vs_gqf.cu  cuckoo_vs_partitioned.cu  cuckoo_vs_tcf.cu  fpr_benchmark.cu  fpr_sweep_benchmark.cu  kmer_benchmark.cu  load_factor_benchmark.cu  profiler_benchmark.cu
include/: CuckooFilter.cuh  CuckooFilterIPC.cuh  CuckooFilterMultiGPU.cuh  bucket_policies.cuh  common.cuh  hash_strategies.cuh  helpers.cuh
scripts/: download_genomes.sh  extract_kmers.sh  mogon_env.sh  mogon_jobscript.sh  plot.sh  plot_benchmark.py  plot_bucket_size.py  plot_cache_benchmark.py  plot_fpr.py  plot_fpr_sweep.py  plot_kmer.py  plot_load_factor.py  plot_memory.py  plot_multi_gpu_scaling.py  plot_performance.py  plot_policy.py  plot_runtime.py  plot_scaling.py  plot_sol_benchmark.py  plot_throughput.py  run_cache_benchmark.py  run_fpr_sweep.py  run_multi_gpu_scaling.py  run_sol_benchmark.py
src/: BucketsTableCpu.cuh  BucketsTableGpu.cuh  NaiveTable.cuh  benchmark.cu  benchmark_buckets.cu  ipc_main.cu  ipc_server_main.cu  main.cu  multi_gpu_main.cu
subprojects/: cpu-cuckoo.wrap  cuco.wrap  gqf.wrap  partitioned-filters.wrap  tcf.wrap
subprojects/packagefiles/gqf/: meson.build
tests/: test_cuckoo_filter.cu
(+13 files in other folders)
